--- a/blog.html
+++ b/blog.html
@@ -51,60 +51,84 @@
     </p>
   </header>
 
-  <!-- Blog Posts Grid -->
+  <!-- Newest Posts Grid (6 latest posts) -->
   <main class="max-w-6xl mx-auto px-4 pb-8 grid gap-10 md:grid-cols-2 lg:grid-cols-3">
+    <!-- Newest post #1 -->
+    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+      <img src="/assets/thumb-rural.jpg" alt="Why Rural Businesses Can’t Ignore Cybersecurity" class="w-full h-48 object-cover" />
+      <div class="p-6">
+        <h2 class="text-xl font-bold text-teal-300 mb-1">
+          <a href="/posts/rural-cybersecurity.html">Why Rural Businesses Can’t Ignore Cybersecurity</a>
+        </h2>
+        <p class="text-gray-400 text-xs mb-2">July 20, 2025</p>
+        <p class="text-gray-300 text-sm">When folks think about hackers, they picture big cities. That’s a mistake.</p>
+      </div>
+    </article>
+
+    <!-- Newest post #2 -->
     <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
       <img src="/assets/thumb-safer-online.jpg" alt="5 Ways to Stay Safer Online" class="w-full h-48 object-cover" />
       <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/safer-online-now.html">5 Ways to Stay Safer Online Right Now</a></h2>
+        <h2 class="text-xl font-bold text-teal-300 mb-1">
+          <a href="/posts/safer-online-now.html">5 Ways to Stay Safer Online Right Now</a>
+        </h2>
+        <p class="text-gray-400 text-xs mb-2">July 15, 2025</p>
         <p class="text-gray-300 text-sm">Quick, actionable cybersecurity advice for real people and small businesses. Start here.</p>
       </div>
     </article>
 
+    <!-- Newest post #3 -->
     <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
       <img src="/assets/thumb-tech-support.png" alt="Tech Support Scam" class="w-full h-48 object-cover" />
       <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/tech-support-scam-warning.html">How to Tell If That Tech Support Call Is a Scam</a></h2>
+        <h2 class="text-xl font-bold text-teal-300 mb-1">
+          <a href="/posts/tech-support-scam-warning.html">How to Tell If That Tech Support Call Is a Scam</a>
+        </h2>
+        <p class="text-gray-400 text-xs mb-2">July 10, 2025</p>
         <p class="text-gray-300 text-sm">Don’t get tricked by cold-callers claiming your account was hacked. Learn how to spot the red flags.</p>
       </div>
     </article>
 
+    <!-- Newest post #4 -->
     <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
       <img src="/assets/thumb-wordpress.jpg" alt="WordPress Security" class="w-full h-48 object-cover" />
       <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/wordpress-security-basics.html">Basic WordPress Security for Beginners</a></h2>
+        <h2 class="text-xl font-bold text-teal-300 mb-1">
+          <a href="/posts/wordpress-security-basics.html">Basic WordPress Security for Beginners</a>
+        </h2>
+        <p class="text-gray-400 text-xs mb-2">July 5, 2025</p>
         <p class="text-gray-300 text-sm">WordPress makes it easy to launch a site, but simplicity comes with security risks.</p>
       </div>
     </article>
 
+    <!-- Newest post #5 -->
     <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
       <img src="/assets/thumb-tools.jpg" alt="Free Tools I Trust" class="w-full h-48 object-cover" />
       <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/free-tools-i-trust.html">Free Tools I Trust</a></h2>
+        <h2 class="text-xl font-bold text-teal-300 mb-1">
+          <a href="/posts/free-tools-i-trust.html">Free Tools I Trust</a>
+        </h2>
+        <p class="text-gray-400 text-xs mb-2">June 28, 2025</p>
         <p class="text-gray-300 text-sm">Not every cybersecurity tool costs money—or your sanity.</p>
       </div>
     </article>
 
+    <!-- Newest post #6 -->
     <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
       <img src="/assets/thumb-ports.png" alt="Open Ports Explained" class="w-full h-48 object-cover" />
       <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/closing-ports-backdoors.html">Are Open Ports a Backdoor?</a></h2>
+        <h2 class="text-xl font-bold text-teal-300 mb-1">
+          <a href="/posts/closing-ports-backdoors.html">Are Open Ports a Backdoor?</a>
+        </h2>
+        <p class="text-gray-400 text-xs mb-2">June 15, 2025</p>
         <p class="text-gray-300 text-sm">Open ports are like doors into your system. Some are needed. Some aren't.</p>
-      </div>
-    </article>
-
-    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-rural.jpg" alt="Rural Cybersecurity" class="w-full h-48 object-cover" />
-      <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/rural-cybersecurity.html">Why Rural Businesses Can’t Ignore Cybersecurity</a></h2>
-        <p class="text-gray-300 text-sm">When folks think about hackers, they picture big cities. That’s a mistake.</p>
       </div>
     </article>
   </main>
 
-  <!-- More Posts Slider -->
+  <!-- Older Posts Slider -->
   <section class="max-w-6xl mx-auto px-4 pb-12">
-    <h3 class="text-teal-300 font-bold text-xl mb-4">More Posts</h3>
+    <h3 class="text-teal-300 font-bold text-xl mb-4">Older Posts</h3>
 
     <div class="relative">
       <button
@@ -120,20 +144,67 @@
         class="flex space-x-4 overflow-x-auto scroll-smooth scrollbar-hide px-8"
         style="scroll-padding-left: 2rem;"
       >
+        <!-- Older post #1 -->
         <a
           href="/posts/third_party_vendors.html"
           class="flex-shrink-0 w-48 rounded overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300"
         >
           <img
             src="/assets/thumb-vendor.png"
-            alt="Vendor Vetting"
+            alt="Why Vendor Vetting Matters"
             class="w-full h-28 object-cover"
             loading="lazy"
           />
-          <p class="text-gray-300 text-sm p-2">Why Rural Businesses Can’t Ignore Cybersecurity</p>
+          <p class="text-gray-400 text-xs mb-1 mt-2">May 30, 2025</p>
+          <p class="text-gray-300 text-sm p-2">Not all armadillos protect your data. Iron Dillo does.</p>
         </a>
 
-        
+        <!-- Older post #2 -->
+        <a
+          href="/posts/post-7.html"
+          class="flex-shrink-0 w-48 rounded overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300"
+        >
+          <img
+            src="/assets/thumb-post7.jpg"
+            alt="How to Spot Phishing Emails"
+            class="w-full h-28 object-cover"
+            loading="lazy"
+          />
+          <p class="text-gray-400 text-xs mb-1 mt-2">May 20, 2025</p>
+          <p class="text-gray-300 text-sm p-2">Learn how to recognize phishing attempts before you click.</p>
+        </a>
+
+        <!-- Older post #3 -->
+        <a
+          href="/posts/post-8.html"
+          class="flex-shrink-0 w-48 rounded overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300"
+        >
+          <img
+            src="/assets/thumb-post8.jpg"
+            alt="Best Password Managers for 2025"
+            class="w-full h-28 object-cover"
+            loading="lazy"
+          />
+          <p class="text-gray-400 text-xs mb-1 mt-2">May 10, 2025</p>
+          <p class="text-gray-300 text-sm p-2">Compare the top password managers to keep your credentials safe.</p>
+        </a>
+
+        <!-- Older post #4 -->
+        <a
+          href="/posts/post-9.html"
+          class="flex-shrink-0 w-48 rounded overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300"
+        >
+          <img
+            src="/assets/thumb-post9.jpg"
+            alt="Securing Remote Work Networks"
+            class="w-full h-28 object-cover"
+            loading="lazy"
+          />
+          <p class="text-gray-400 text-xs mb-1 mt-2">May 01, 2025</p>
+          <p class="text-gray-300 text-sm p-2">Tips for keeping your remote connections safe and private.</p>
+        </a>
+
+        <!-- Add more older posts as needed -->
       </div>
 
       <button
