--- a/blog.html
+++ b/blog.html
@@ -1,242 +1,183 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
-  <meta charset="UTF-8" />
-  <title>Iron Dillo Blog – Cyber Hygiene Tips & Updates</title>
-  <meta name="description" content="Cybersecurity guidance, threat breakdowns, and plain-English advice for real-world digital safety." />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="/assets/favicon.ico" />
-  <link rel="canonical" href="https://irondillo.com/blog.html" />
+<meta charset="UTF-8" />
+<title>Iron Dillo Blog – Cyber Hygiene Tips & Updates</title>
+<meta name="description" content="Cybersecurity guidance, threat breakdowns, and plain-English advice for real-world digital safety." />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="icon" href="/assets/favicon.ico" />
+<link rel="canonical" href="https://irondillo.com/blog.html" />
 
-  <!-- SEO + Open Graph -->
-  <meta name="keywords" content="cybersecurity blog, IT tips, threat awareness, cyber hygiene, small business security" />
-  <meta name="author" content="Kristopher McCoy" />
-  <meta property="og:title" content="IronDillo Blog" />
-  <meta property="og:description" content="Cyber hygiene tips, threat breakdowns, and security insights for small businesses and individuals." />
-  <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg" />
-  <meta property="og:url" content="https://irondillo.com/blog.html" />
-  <meta name="twitter:card" content="summary_large_image" />
+<!-- SEO + Open Graph -->
+<meta name="keywords" content="cybersecurity blog, IT tips, threat awareness, cyber hygiene, small business security" />
+<meta name="author" content="Kristopher McCoy" />
+<meta property="og:title" content="IronDillo Blog" />
+<meta property="og:description" content="Cyber hygiene tips, threat breakdowns, and security insights for small businesses and individuals." />
+<meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg" />
+<meta property="og:url" content="https://irondillo.com/blog.html" />
+<meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Tailwind CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-    .fade-in { animation: fadeIn 1s ease-out both; }
+<!-- Tailwind CDN -->
+<script src="https://cdn.tailwindcss.com"></script>
+<style>
+@keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+.fade-in { animation: fadeIn 1s ease-out both; }
 
-    /* Optional: Hide scrollbar but keep scrolling */
-    .scrollbar-hide::-webkit-scrollbar { display: none; }
-    .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
-  </style>
+/* Optional: Hide scrollbar but keep scrolling */
+.scrollbar-hide::-webkit-scrollbar { display: none; }
+.scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
+</style>
 </head>
 
 <body class="bg-gray-900 text-gray-100 font-sans flex flex-col min-h-screen">
 
-  <!-- Header with logo and nav -->
-  <header class="p-8 text-center max-w-3xl mx-auto fade-in">
-    <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo" class="mx-auto w-32 mb-6" />
-    <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Iron Dillo Blog</h1>
+<!-- Header with logo and nav -->
+<header class="p-8 text-center max-w-3xl mx-auto fade-in">
+  <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo" class="mx-auto w-32 mb-6" />
+  <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Iron Dillo Blog</h1>
 
-    <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
-      <div class="flex justify-between">
-        <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-        <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-        <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-        <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Blog</a>
-        <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
-      </div>
-    </nav>
-
-    <p class="text-gray-300 max-w-xl mx-auto">
-      Cybersecurity guidance, digital hygiene tips, and insights for real people and small businesses.
-    </p>
-  </header>
-
-  <!-- Newest Posts Grid (6 latest posts) -->
-  <main class="max-w-6xl mx-auto px-4 pb-8 grid gap-10 md:grid-cols-2 lg:grid-cols-3">
-    <!-- Newest post #1 -->
-    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-rural.jpg" alt="Why Rural Businesses Can’t Ignore Cybersecurity" class="w-full h-48 object-cover" />
-      <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-1">
-          <a href="/posts/rural-cybersecurity.html">Why Rural Businesses Can’t Ignore Cybersecurity</a>
-        </h2>
-        <p class="text-gray-400 text-xs mb-2">July 20, 2025</p>
-        <p class="text-gray-300 text-sm">When folks think about hackers, they picture big cities. That’s a mistake.</p>
-      </div>
-    </article>
-
-    <!-- Newest post #2 -->
-    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-safer-online.jpg" alt="5 Ways to Stay Safer Online" class="w-full h-48 object-cover" />
-      <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-1">
-          <a href="/posts/safer-online-now.html">5 Ways to Stay Safer Online Right Now</a>
-        </h2>
-        <p class="text-gray-400 text-xs mb-2">July 15, 2025</p>
-        <p class="text-gray-300 text-sm">Quick, actionable cybersecurity advice for real people and small businesses. Start here.</p>
-      </div>
-    </article>
-
-    <!-- Newest post #3 -->
-    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-tech-support.png" alt="Tech Support Scam" class="w-full h-48 object-cover" />
-      <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-1">
-          <a href="/posts/tech-support-scam-warning.html">How to Tell If That Tech Support Call Is a Scam</a>
-        </h2>
-        <p class="text-gray-400 text-xs mb-2">July 10, 2025</p>
-        <p class="text-gray-300 text-sm">Don’t get tricked by cold-callers claiming your account was hacked. Learn how to spot the red flags.</p>
-      </div>
-    </article>
-
-    <!-- Newest post #4 -->
-    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-wordpress.jpg" alt="WordPress Security" class="w-full h-48 object-cover" />
-      <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-1">
-          <a href="/posts/wordpress-security-basics.html">Basic WordPress Security for Beginners</a>
-        </h2>
-        <p class="text-gray-400 text-xs mb-2">July 5, 2025</p>
-        <p class="text-gray-300 text-sm">WordPress makes it easy to launch a site, but simplicity comes with security risks.</p>
-      </div>
-    </article>
-
-    <!-- Newest post #5 -->
-    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-tools.jpg" alt="Free Tools I Trust" class="w-full h-48 object-cover" />
-      <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-1">
-          <a href="/posts/free-tools-i-trust.html">Free Tools I Trust</a>
-        </h2>
-        <p class="text-gray-400 text-xs mb-2">June 28, 2025</p>
-        <p class="text-gray-300 text-sm">Not every cybersecurity tool costs money—or your sanity.</p>
-      </div>
-    </article>
-
-    <!-- Newest post #6 -->
-    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-ports.png" alt="Open Ports Explained" class="w-full h-48 object-cover" />
-      <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-1">
-          <a href="/posts/closing-ports-backdoors.html">Are Open Ports a Backdoor?</a>
-        </h2>
-        <p class="text-gray-400 text-xs mb-2">June 15, 2025</p>
-        <p class="text-gray-300 text-sm">Open ports are like doors into your system. Some are needed. Some aren't.</p>
-      </div>
-    </article>
-  </main>
-
-  <!-- Older Posts Slider -->
-  <section class="max-w-6xl mx-auto px-4 pb-12">
-    <h3 class="text-teal-300 font-bold text-xl mb-4">Older Posts</h3>
-
-    <div class="relative">
-      <button
-        id="slider-prev"
-        aria-label="Scroll previous"
-        class="absolute left-0 top-1/2 -translate-y-1/2 z-20 bg-teal-600 hover:bg-teal-700 text-white rounded-full p-2 shadow-md"
-      >
-        ‹
-      </button>
-
-      <div
-        id="thumbnail-slider"
-        class="flex space-x-4 overflow-x-auto scroll-smooth scrollbar-hide px-8"
-        style="scroll-padding-left: 2rem;"
-      >
-        <!-- Older post #1 -->
-        <a
-          href="/posts/third_party_vendors.html"
-          class="flex-shrink-0 w-48 rounded overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300"
-        >
-          <img
-            src="/assets/thumb-vendor.png"
-            alt="Why Vendor Vetting Matters"
-            class="w-full h-28 object-cover"
-            loading="lazy"
-          />
-          <p class="text-gray-400 text-xs mb-1 mt-2">May 30, 2025</p>
-          <p class="text-gray-300 text-sm p-2">Not all armadillos protect your data. Iron Dillo does.</p>
-        </a>
-
-        <!-- Older post #2 -->
-        <a
-          href="/posts/post-7.html"
-          class="flex-shrink-0 w-48 rounded overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300"
-        >
-          <img
-            src="/assets/thumb-post7.jpg"
-            alt="How to Spot Phishing Emails"
-            class="w-full h-28 object-cover"
-            loading="lazy"
-          />
-          <p class="text-gray-400 text-xs mb-1 mt-2">May 20, 2025</p>
-          <p class="text-gray-300 text-sm p-2">Learn how to recognize phishing attempts before you click.</p>
-        </a>
-
-        <!-- Older post #3 -->
-        <a
-          href="/posts/post-8.html"
-          class="flex-shrink-0 w-48 rounded overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300"
-        >
-          <img
-            src="/assets/thumb-post8.jpg"
-            alt="Best Password Managers for 2025"
-            class="w-full h-28 object-cover"
-            loading="lazy"
-          />
-          <p class="text-gray-400 text-xs mb-1 mt-2">May 10, 2025</p>
-          <p class="text-gray-300 text-sm p-2">Compare the top password managers to keep your credentials safe.</p>
-        </a>
-
-        <!-- Older post #4 -->
-        <a
-          href="/posts/post-9.html"
-          class="flex-shrink-0 w-48 rounded overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300"
-        >
-          <img
-            src="/assets/thumb-post9.jpg"
-            alt="Securing Remote Work Networks"
-            class="w-full h-28 object-cover"
-            loading="lazy"
-          />
-          <p class="text-gray-400 text-xs mb-1 mt-2">May 01, 2025</p>
-          <p class="text-gray-300 text-sm p-2">Tips for keeping your remote connections safe and private.</p>
-        </a>
-
-        <!-- Add more older posts as needed -->
-      </div>
-
-      <button
-        id="slider-next"
-        aria-label="Scroll next"
-        class="absolute right-0 top-1/2 -translate-y-1/2 z-20 bg-teal-600 hover:bg-teal-700 text-white rounded-full p-2 shadow-md"
-      >
-        ›
-      </button>
+  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
+    <div class="flex justify-between">
+      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+      <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Blog</a>
+      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
     </div>
-  </section>
+  </nav>
 
-  <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 text-sm mt-auto max-w-3xl mx-auto rounded-md">
-    &copy; 2025 Iron Dillo. All rights reserved. |
-    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> |
-    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
-  </footer>
+  <p class="text-gray-300 max-w-xl mx-auto">
+    Cybersecurity guidance, digital hygiene tips, and insights for real people and small businesses.
+  </p>
+</header>
 
-  <script>
-    const slider = document.getElementById('thumbnail-slider');
-    const prevBtn = document.getElementById('slider-prev');
-    const nextBtn = document.getElementById('slider-next');
-    const scrollAmount = 320;
+<!-- Blog Posts Grid -->
+<main class="max-w-6xl mx-auto px-4 pb-8 grid gap-10 md:grid-cols-2 lg:grid-cols-3">
 
-    prevBtn.addEventListener('click', () => {
-      slider.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
-    });
+  <!-- Newest 6 posts -->
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+    <img src="/assets/thumb-safer-online.jpg" alt="5 Ways to Stay Safer Online" class="w-full h-48 object-cover" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1"><a href="/posts/safer-online-now.html">5 Ways to Stay Safer Online Right Now</a></h2>
+      <p class="text-gray-400 text-xs mb-2">July 22, 2025</p>
+      <p class="text-gray-300 text-sm">Quick, actionable cybersecurity advice for real people and small businesses. Start here.</p>
+    </div>
+  </article>
 
-    nextBtn.addEventListener('click', () => {
-      slider.scrollBy({ left: scrollAmount, behavior: 'smooth' });
-    });
-  </script>
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+    <img src="/assets/thumb-tech-support.png" alt="Tech Support Scam" class="w-full h-48 object-cover" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1"><a href="/posts/tech-support-scam-warning.html">How to Tell If That Tech Support Call Is a Scam</a></h2>
+      <p class="text-gray-400 text-xs mb-2">July 19, 2025</p>
+      <p class="text-gray-300 text-sm">Don’t get tricked by cold-callers claiming your account was hacked. Learn how to spot the red flags.</p>
+    </div>
+  </article>
+
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+    <img src="/assets/thumb-wordpress.jpg" alt="WordPress Security" class="w-full h-48 object-cover" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1"><a href="/posts/wordpress-security-basics.html">Basic WordPress Security for Beginners</a></h2>
+      <p class="text-gray-400 text-xs mb-2">July 15, 2025</p>
+      <p class="text-gray-300 text-sm">WordPress makes it easy to launch a site, but simplicity comes with security risks.</p>
+    </div>
+  </article>
+
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+    <img src="/assets/thumb-tools.jpg" alt="Free Tools I Trust" class="w-full h-48 object-cover" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1"><a href="/posts/free-tools-i-trust.html">Free Tools I Trust</a></h2>
+      <p class="text-gray-400 text-xs mb-2">July 10, 2025</p>
+      <p class="text-gray-300 text-sm">Not every cybersecurity tool costs money—or your sanity.</p>
+    </div>
+  </article>
+
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+    <img src="/assets/thumb-ports.png" alt="Open Ports Explained" class="w-full h-48 object-cover" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1"><a href="/posts/closing-ports-backdoors.html">Are Open Ports a Backdoor?</a></h2>
+      <p class="text-gray-400 text-xs mb-2">July 5, 2025</p>
+      <p class="text-gray-300 text-sm">Open ports are like doors into your system. Some are needed. Some aren't.</p>
+    </div>
+  </article>
+
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+    <img src="/assets/thumb-rural.jpg" alt="Rural Cybersecurity" class="w-full h-48 object-cover" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1"><a href="/posts/rural-cybersecurity.html">Why Rural Businesses Can’t Ignore Cybersecurity</a></h2>
+      <p class="text-gray-400 text-xs mb-2">June 30, 2025</p>
+      <p class="text-gray-300 text-sm">When folks think about hackers, they picture big cities. That’s a mistake.</p>
+    </div>
+  </article>
+
+</main>
+
+<!-- More Posts Slider -->
+<section class="max-w-6xl mx-auto px-4 pb-12">
+  <h3 class="text-teal-300 font-bold text-xl mb-4">More Posts</h3>
+
+  <div class="relative">
+    <button
+      id="slider-prev"
+      aria-label="Scroll previous"
+      class="absolute left-0 top-1/2 -translate-y-1/2 z-20 bg-teal-600 hover:bg-teal-700 text-white rounded-full p-2 shadow-md"
+    >
+      ‹
+    </button>
+
+    <div
+      id="thumbnail-slider"
+      class="flex space-x-4 overflow-x-auto scroll-smooth scrollbar-hide px-8"
+      style="scroll-padding-left: 2rem;"
+    >
+      <a
+        href="/posts/third_party_vendors.html"
+        class="flex-shrink-0 w-48 rounded overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300"
+      >
+        <img
+          src="/assets/thumb-vendor.png"
+          alt="Vendor Vetting"
+          class="w-full h-28 object-cover"
+          loading="lazy"
+        />
+        <p class="text-gray-400 text-xs mb-1 mt-2">May 20, 2025</p>
+        <p class="text-gray-300 text-sm p-2">Not all armadillos protect your data. Iron Dillo does.</p>
+      </a>
+
+      <!-- Add more older posts here if you have them -->
+
+    </div>
+
+    <button
+      id="slider-next"
+      aria-label="Scroll next"
+      class="absolute right-0 top-1/2 -translate-y-1/2 z-20 bg-teal-600 hover:bg-teal-700 text-white rounded-full p-2 shadow-md"
+    >
+      ›
+    </button>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-gray-800 text-gray-500 text-center p-6 text-sm mt-auto max-w-3xl mx-auto rounded-md">
+  &copy; 2025 Iron Dillo. All rights reserved. |
+  <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> |
+  <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
+</footer>
+
+<script>
+const slider = document.getElementById('thumbnail-slider');
+const prevBtn = document.getElementById('slider-prev');
+const nextBtn = document.getElementById('slider-next');
+const scrollAmount = 320;
+
+prevBtn.addEventListener('click', () => {
+  slider.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
+});
+
+nextBtn.addEventListener('click', () => {
+  slider.scrollBy({ left: scrollAmount, behavior: 'smooth' });
+});
+</script>
+
 </body>
 </html>
