--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
 <meta charset="UTF-8" />
 <title>Iron Dillo Cybersecurity – Veteran-Owned Online Protection</title>
+
+<script>
+  // Toggle this flag to enable/disable maintenance mode
+  const maintenanceMode = true;
+
+  if (maintenanceMode) {
+    window.location.href = "maintenance.html";
+  }
+</script>
+  
 <meta name="description" content="Iron Dillo Cybersecurity provides honest, hands-on protection for individuals, small businesses, and rural operations. Veteran-owned and mission-driven, offering remote diagnostics, documentation, and guidance you can trust." />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="icon" href="/assets/favicon.ico" />
