--- a/maintenance.html
+++ b/maintenance.html
@@ -27,7 +27,8 @@
     <!-- Background Image -->
     <div
       class="absolute inset-0 bg-cover bg-center opacity-30"
-      style="background-image: url('/mnt/data/A_digital_painting_in_a_cyberpunk_and_science_fict.png');"
+      style="background-image: url('/assets/cyber-stasis.png');"
+
     ></div>
 
     <!-- Dark Overlay -->
