--- a/maintenance.html
+++ b/maintenance.html
@@ -27,7 +27,8 @@
     <!-- Background Image -->
     <div
       class="absolute inset-0 bg-cover bg-center opacity-30"
-      style="background-image: url('assets/Cyber-stasis.png');"
+      style="background-image: url('/irondillo-site/assets/Cyber-stasis.png');"
+
 
     ></div>
 
