--- a/maintenance.html
+++ b/maintenance.html
@@ -25,10 +25,13 @@
   </head>
   <body class="relative h-screen w-screen bg-black text-white overflow-hidden">
     <!-- Background Image -->
-   <div
-  class="absolute inset-0 bg-cover bg-center opacity-30"
-  style="background-image: url('assets/Cyber-stasis.png');"
-    ></div>
+ <div class="absolute inset-0 overflow-hidden">
+  <img
+    src="assets/Cyber-stasis.png"
+    alt="Background Cyberstasis"
+    class="object-cover w-full h-full opacity-30"
+  />
+</div>
 
 
     <!-- Dark Overlay -->
