--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <script>
   // Toggle this flag to enable/disable maintenance mode
-  const maintenanceMode = true;
+  const maintenanceMode = false;
 
   if (maintenanceMode) {
     window.location.href = "maintenance.html";
