--- a/services.html
+++ b/services.html
@@ -67,13 +67,13 @@
     </section>
 
     <section class="text-center mt-12">
-      <p class="text-teal-400 font-semibold max-w-xl mx-auto">
-        Pricing is customized based on your unique needs.<br />
-        <a href="/contact.html" class="underline hover:text-teal-300">Contact me</a> today for a free consultation and personalized quote.
-      </p>
-    </section>
-  </main>
-
+  <p class="text-teal-400 font-semibold max-w-xl mx-auto">
+    Need more advanced support? From detailed risk assessments to full remediation assistance,
+    pricing is customized to fit your needs.<br />
+    <a href="/contact.html" class="underline hover:text-teal-300">Contact me</a> today for a free consultation and tailored quote.
+  </p>
+</section>
+    
   <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md fade-in">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
     <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
