--- a/about.html
+++ b/about.html
@@ -46,9 +46,8 @@
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Meet Kris McCoy</h2>
       <p class="text-gray-300 leading-relaxed">
         I served in the U.S. Army in field artillery during Operation Enduring Freedom. After my service,
-        I earned a Master of Science in Cybersecurity with distinction and continued my education through
-        the WGU Business School. Today, I’m proud to be active in the East Texas business community,
-        including our local Chamber of Commerce.
+        I earned a Master of Science in Cybersecurity with distinction and am continuing my education through
+        the WGU Business School. Today, I’m proud to be active in the East Texas business community!
       </p>
       <p class="text-gray-300 leading-relaxed mt-4">
         I am pursuing professional certifications to further strengthen my ability to serve clients,
