--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ animation: fadeIn 1.2s ease-out both;
 <header class="p-8 text-center max-w-3xl mx-auto fade-in">
   <img src="/assets/IronDilloLogo.png" alt="IronDillo logo" class="mx-auto mb-6 w-32 h-auto" />
   <h1 class="text-4xl font-extrabold text-teal-400 mb-4">
-    Protect Your Small Business Before It’s Too Expensive
+    Iron Dillo Cybersecurity
   </h1>
 
   <!-- Navigation -->
