--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ animation: fadeIn 1.2s ease-out both;
 
 <!-- Footer -->
 <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
-  &copy; 2025 Iron Dillo. All rights reserved.
+  &copy; <span class="current-year"></span> Iron Dillo. All rights reserved.
   <p class="mt-4 text-gray-400 italic">
     Trusted by East Texas businesses. Veteran-owned. Mission-driven.
   </p>
@@ -103,6 +103,12 @@ animation: fadeIn 1.2s ease-out both;
     <a href="/commitment.html" class="hover:underline">Our Commitment</a>
   </div>
 </footer>
+
+<script>
+  document.querySelectorAll('.current-year').forEach(el => {
+    el.textContent = new Date().getFullYear();
+  });
+</script>
 
 </body>
 </html>
