Add location button on home page

--- a/index.html
+++ b/index.html
@@ -70,10 +70,16 @@ animation: fadeIn 1.2s ease-out both;
     </span>
   </p>
 
-  <a href="/contact.html" 
-     class="mt-4 inline-block bg-teal-500 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-teal-600 transition">
-     Schedule Your $199 Security Check
-  </a>
+  <div class="mt-4 flex flex-wrap gap-4 justify-center">
+    <a href="/contact.html"
+       class="inline-block bg-teal-500 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-teal-600 transition">
+       Schedule Your $199 Security Check
+    </a>
+    <a href="/lindale-tyler-cybersecurity.html"
+       class="inline-block bg-gray-700 text-teal-400 px-6 py-3 rounded-lg shadow-lg hover:bg-gray-600 transition">
+       Lindale & Tyler Cybersecurity
+    </a>
+  </div>
 </header>
 
 <!-- Social icons -->
