--- a/lindale-tyler-cybersecurity.html
+++ b/lindale-tyler-cybersecurity.html
@@ -59,7 +59,7 @@
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Why Local Cyber Defense Matters</h2>
       <p class="text-gray-300 leading-relaxed">
-        Cyber threats don\'t stop at city limits. From ransomware to phishing, Lindale and Tyler businesses face the same
+        Cyber threats don't stop at city limits. From ransomware to phishing, Lindale and Tyler businesses face the same
         dangers as any large metro area. Working with a nearby partner means quicker response times and a better
         understanding of your unique challenges.
       </p>
