--- a/terms.html
+++ b/terms.html
@@ -54,6 +54,9 @@
       <p>We work hard to ensure that all content is accurate and relevant. Cybersecurity changes quickly, so while the information here is trustworthy, no single resource can guarantee full protection from every threat. For advice specific to your situation, please contact us for a consulting engagement.</p>
       
       <h2 class="text-xl font-semibold text-teal-300">3. Responsible Use of This Site</h2>
+      <p>To keep this site safe, secure, and useful for everyone, we ask that visitors use it responsibly. 
+By accessing Iron Dillo Cybersecurity, you agree not to engage in activities that could harm the site, 
+compromise its security, or misuse the content provided.</p>
       <ul class="list-disc list-inside space-y-2 text-gray-300">
         <li>Hack, disrupt, or exploit its content or functionality</li>
         <li>Use it for unlawful or fraudulent purposes</li>
