--- a/terms.html
+++ b/terms.html
@@ -68,7 +68,7 @@
       <p>Iron Dillo Cybersecurity is not liable for damages that may result from using or misapplying the educational content on this site. Professional services, when engaged through a written agreement, are governed by their own terms and deliverables.</p>
       
       <h2 class="text-xl font-semibold text-teal-300">6. Contact Us</h2>
-      <p>If you’d like to learn more about our consulting services or have any concerns, please reach out through the <a href="/index.html#contact" class="text-teal-400 underline hover:text-teal-300">Contact Form</a> or email us at [Insert Email Address].</p>
+      <p>If you’d like to learn more about our consulting services or have any concerns, please reach out through the <a href="/index.html#contact" class="text-teal-400 underline hover:text-teal-300">Contact Form</a> or email us at waldeinsamkeit8213@gmail.com</p>
     </section>
   </main>
 
