--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
       the WGU Business School. Today, I’m proud to be active in the East Texas business community!
     </p>
     <p class="text-gray-300 leading-relaxed mt-4">
-      I am pursuing professional certifications to further strengthen my ability to serve clients,
+      I am pursuing the CISSP in order to strengthen my ability to serve clients,
       and I bring the same discipline, vigilance, and integrity from my military service into every project.
     </p>
   </div>
