Update OG preview image extension

--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
   <meta name="author" content="Kristopher McCoy" />
   <meta property="og:title" content="IronDillo Blog" />
   <meta property="og:description" content="Cyber hygiene tips, threat breakdowns, and security insights for small businesses and individuals." />
-  <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg" />
+  <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.png" />
   <meta property="og:url" content="https://irondillo.com/blog.html" />
   <meta name="twitter:card" content="summary_large_image" />
 
