--- a/lindale-tyler-cybersecurity.html
+++ b/lindale-tyler-cybersecurity.html
@@ -21,7 +21,7 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Cybersecurity in Lindale & Tyler, Texas | Iron Dillo" />
   <meta property="og:description" content="Local cyber defense for Lindale and Tyler, Texas businesses. Protect your operations with Iron Dillo." />
-  <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg" />
+  <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.png" />
   <meta property="og:url" content="https://irondillo.com/lindale-tyler-cybersecurity.html" />
   <meta name="twitter:card" content="summary_large_image" />
   <script src="https://cdn.tailwindcss.com"></script>
