Replace IronDilloLogo references

--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
 
   <!-- Header with logo and nav -->
   <header class="p-8 text-center max-w-3xl mx-auto fade-in">
-    <img loading="lazy" src="/assets/IronDilloLogo.png" alt="IronDillo Logo" class="mx-auto w-32 mb-6" />
+    <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo Logo" class="mx-auto w-32 mb-6" />
     <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Iron Dillo Blog</h1>
 
     <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
