--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
   <!-- Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto">
-    <img loading="lazy" src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
+    <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
   </header>
 
   <!-- Navigation -->
