--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ animation: fadeIn 1.2s ease-out both;
 
 <!-- Header with logo, title, and navigation -->
 <header class="p-8 text-center max-w-3xl mx-auto fade-in">
-  <img loading="lazy" src="/assets/IronDilloLogo.png" alt="IronDillo logo" class="mx-auto mb-6 w-32 h-auto" />
+  <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo logo" class="mx-auto mb-6 w-32 h-auto" />
   <h1 class="text-4xl font-extrabold text-teal-400 mb-4">
     Iron Dillo Cybersecurity
   </h1>
