--- a/commitment.html
+++ b/commitment.html
@@ -24,7 +24,7 @@
 
   <!-- Logo Header -->
   <header class="text-center pt-8">
-    <img loading="lazy" src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
+    <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
   </header>
 
   <!-- Navigation -->
