--- a/thank-you.html
+++ b/thank-you.html
@@ -11,7 +11,7 @@
 
   <!-- Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto">
-    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
+    <img src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
   </header>
 
   <!-- Navigation -->
