--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
 <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
 <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
 <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
   <title>Contact | Iron Dillo Cybersecurity</title>
   
   <!-- Tailwind CSS CDN -->
